# raw-validity

./: .gitignore  Cargo.toml  README copy.md  README.md
cnf/: Cargo.toml
cnf/src/: lib.rs  normal_cnf.rs  three_cnf.rs
docs/: Cargo.toml  index.html  index.md  package.json  wasm.d.ts  wasm.js  wasm_bg.wasm  webapp.js  webapp_bg.wasm
docs/pkg/: docs.d.ts  docs.js  docs_bg.d.ts  docs_bg.js  docs_bg.wasm  package.json
docs/src/: lib.rs
exec/: Cargo.toml
exec/src/: main.rs
l_group_cnf/: Cargo.toml
l_group_cnf/src/: lib.rs  normal_cnf.rs  three_cnf.rs
l_group_formulas/: Cargo.toml
l_group_formulas/benches/: reducing_benchmark.rs
l_group_formulas/src/: free_group_term.rs  l_group_term.rs  lib.rs  literal.rs  parsing_error.rs
l_group_validity/: Cargo.toml
l_group_validity/src/: extend_to_right_order.rs  lib.rs  split_at_meets.rs
parsing/: Cargo.toml
parsing/src/: lib.rs  parse_free_group_term.rs  parse_l_group_term.rs  parse_l_group_terms.rs  parse_literal.rs
src/: formulas.rs  lib.rs
src/terms/: free_group_term.rs  l_group_term.rs  l_group_term_reducing.rs  literal.rs
terms/: Cargo.toml  literal.rs
terms/benches/: reducing_benchmark.rs
terms/src/: equations.rs  formula.rs  free_group_term.rs  l_group_term.rs  l_group_term_reducing.rs  lib.rs  literal.rs  parsing_error.rs  short_free_group_term.rs
terms/src/free_group_term/: parse_free_group_term.rs
terms/src/l_group_term/: parse_l_group_term.rs
terms/src/parsing/: parse_free_group_term.rs  parse_l_group_term.rs  parse_literal.rs
truncated/: Cargo.toml
truncated/src/: lib.rs  tiny_truncated_group.rs  truncated_group.rs  truncated_subgroup.rs
truncated_free_groups/: Cargo.toml
truncated_free_groups/src/: tiny_truncated_group.rs  truncated_group.rs  truncated_subgroup.rs
validity/: Cargo.toml
validity/src/: extend_to_right_order.rs  lib.rs
webapp/: Cargo.toml
webapp/src/: lib.rs
