[package]
name = "exec"
version = "0.1.0"
authors = ["Levi Ryffel <levi.ryffel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
l_group_formulas = { path = "../l_group_formulas" }
cnf = { path = "../cnf" }
validity = { path = "../validity" }