[package]
name = "l_group_cnf"
version = "0.1.0"
authors = ["Levi Ryffel <levi.ryffel@gmail.com>"]
edition = "2018"
repository = "https://github.com/raw-bacon/raw-validity"
license = "MIT OR Apache-2.0"
description = "meets of joins of free group terms"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
l_group_formulas = { path = "../l_group_formulas" }
rand = "0.7.3"
