[package]
name = "terms"
version = "0.1.0"
authors = ["Levi Ryffel <levi.ryffel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "reducing_benchmark"
harness = false